adds padding to the main element and styles the overall header

--- a/style.css
+++ b/style.css
@@ -19,5 +19,17 @@ h6 {
 
 body {
     margin: 0;
-  }
+}
 
+.header {
+    padding: 48px 16px;
+    text-align: center;
+    background-color: #eee;
+}
+  
+.main {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 16px;
+}
+  
