--- a/style.css
+++ b/style.css
@@ -22,15 +22,77 @@ body {
     margin: 0;
 }
 
+*::selection {
+  background-color: plum;
+}
+
 .header {
     padding: 48px 16px;
+    padding-top: 72px;
     text-align: center;
     background-color: #eee;
+    position: relative;
 }
-  
+
+.hire-me {
+  position: absolute;
+  right: 16px;
+  top: 16px;
+  padding: 8px;
+  border-radius: 4px;
+  background: plum;
+  color: black;
+}
+
+.nav-link {
+  padding: 4px 8px;
+  color: black;
+}
+
+.nav-link:hover {
+  color: black;
+  background-color: lightgray;
+}
+
+.nav-link:active {
+  color: white;
+  background-color: grey;
+}
+
+.nav-link + .nav-link {
+  margin-left: 16px;
+}
+
 .main {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 16px;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 16px;
 }
+
+.main > * + * {
+  margin-top: 48px;
+}
+
+.main > * {
+  border-top: 2px solid grey;
+  padding: 0 16px;
+}
+
+.main > *:first-child {
+  border-top: none;
+}
+
+.article-heading {
+  position: relative;
+  left: -16px;
+}
+
+.experience-heading {
+  display: inline-block;
+}
+
+.experience-subheading {
+  display: inline-block;
+}
+
   
