--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 * {
   font-family: "Roboto", sans-serif;
+  font-size: 16px;
 }
 
 h1,
@@ -27,25 +28,37 @@ body {
 }
 
 .header {
-    padding: 48px 16px;
-    padding-top: 72px;
+    padding: 3rem 1rem;
+    padding-top: 4.5rem;
     text-align: center;
     background-color: #eee;
     position: relative;
 }
 
+.heading-group {
+  font-size: 4rem;
+}
+
+.main-heading {
+  font-size: 1em;
+}
+
+.profession {
+  font-size: 0.25em;
+}
+
 .hire-me {
   position: absolute;
-  right: 16px;
-  top: 16px;
-  padding: 8px;
-  border-radius: 4px;
+  right: 1rem;
+  top: 1rem;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
   background: plum;
   color: black;
 }
 
 .nav-link {
-  padding: 4px 8px;
+  padding: 0.25rem 0.5rem;
   color: black;
 }
 
@@ -60,22 +73,22 @@ body {
 }
 
 .nav-link + .nav-link {
-  margin-left: 16px;
+  margin-left: 1rem;
 }
 
 .main {
-  max-width: 800px;
+  max-width: 60ch;
   margin: 0 auto;
-  padding: 16px;
+  padding: 1rem;
 }
 
 .main > * + * {
-  margin-top: 48px;
+  margin-top: 3rem;
 }
 
 .main > * {
-  border-top: 2px solid grey;
-  padding: 0 16px;
+  border-top: 0.125rem solid grey;
+  padding: 0 1rem;
 }
 
 .main > *:first-child {
@@ -84,7 +97,7 @@ body {
 
 .article-heading {
   position: relative;
-  left: -16px;
+  left: -1rem;
 }
 
 .experience-heading {
