--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
   box-sizing: border-box;
 }
 
-* {
-  font-family: "Roboto", sans-serif;
+html{
+  font-family:"Roboto", sans-serif;
   font-size: 16px;
 }
+
+@media
 
 h1,
 h2,
