--- a/style.css
+++ b/style.css
@@ -8,8 +8,15 @@ html{
   font-family:"Roboto", sans-serif;
   font-size: 16px;
 }
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+}
 
-@media
+@media screen and (min-width: 992px) {
+  html {
+    font-size: 20px;
 
 h1,
 h2,
