--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html{
   font-family:"Roboto", sans-serif;
   font-size: 16px;
 }
+
 @media screen and (min-width: 768px) {
   html {
     font-size: 18px;
@@ -82,6 +83,19 @@ body {
   }
 }
 
+.navigation {
+  display: flex;
+  flex-deirection: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .navigation {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+
 .nav-link {
   padding: 0.25rem 0.5rem;
   color: black;
@@ -97,8 +111,10 @@ body {
   background-color: grey;
 }
 
-.nav-link + .nav-link {
+@media screen and (min-width: 768px) {
+  .nav-link + .nav-link {
   margin-left: 1rem;
+  }
 }
 
 .main {
@@ -111,6 +127,12 @@ body {
   margin-top: 3rem;
 }
 
+@media screen and (min-width: 768px) {
+  .main > * + * {
+    margin-top: 5rem;
+  }
+}
+
 .main > * {
   border-top: 0.125rem solid grey;
   padding: 0 1rem;
@@ -121,16 +143,21 @@ body {
 }
 
 .article-heading {
-  position: relative;
-  left: -1rem;
+    position: relative;
+    left: -1rem;
+}
+ 
+.experience-header {
+  display: flex;
+  flex-direction: column;
 }
 
-.experience-heading {
-  display: inline-block;
+@media screen and (min-width: 768px) {
+  .experience-header {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: space-between;
+  }
 }
-
-.experience-subheading {
-  display: inline-block;
-}
-
   
