--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-html{
+html {
   font-family:"Roboto", sans-serif;
   font-size: 16px;
 }
@@ -26,7 +26,7 @@ h4,
 h5,
 h6 {
   font-family: "Oswald", sans-serif;
-  color:mediumblue;
+  color:mediumblue
 }
 
 body {
@@ -101,7 +101,7 @@ a:active {
 
 .navigation {
   display: flex;
-  flex-deirection: column;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -122,7 +122,7 @@ a:active {
 }
 
 .nav-link:active {
-  blackground-color: blueviolet;
+  background-color: blueviolet;
 }
 
 @media screen and (min-width: 768px) {
