--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-family:"Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
 }
 
@@ -18,6 +18,8 @@ html {
 @media screen and (min-width: 992px) {
   html {
     font-size: 20px;
+  }
+}
 
 h1,
 h2,
@@ -34,15 +36,7 @@ body {
 }
 
 *::selection {
-  background-color: plum;
-}
-
-.header {
-    padding: 3rem 1rem;
-    padding-top: 4.5rem;
-    text-align: center;
-    background-color: #eee;
-    position: relative;
+  background-color: aquamarine;
 }
 
 a,
