--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h4,
 h5,
 h6 {
   font-family: "Oswald", sans-serif;
-  color:mediumblue
+  color:royalblue;
 }
 
 body {
@@ -36,7 +36,7 @@ body {
 }
 
 *::selection {
-  background-color: aquamarine;
+  background-color: royalblue;
 }
 
 a,
@@ -51,7 +51,7 @@ a:active {
   padding: 3rem 1rem;
   padding-top: 4.5rem;
   text-align: center;
-  background-image: linear-gradient(235deg, snow, aqua);
+  background-image: linear-gradient(235deg, snow, rgb(143, 142, 142));
   position:relative;
 }
 
@@ -73,8 +73,8 @@ a:active {
   top: 1rem;
   padding: 0.5rem;
   border-radius: 0.25rem;
-  background: aqua;
-  color: black;
+  background-color: royalblue;
+  color: white;
 }
 
 @media screen and (min: width 992px) {
@@ -112,7 +112,7 @@ a:active {
 }
 
 .nav-link:hover {
-  background-color: blue;
+  background-color: royalblue;
 }
 
 .nav-link:active {
@@ -142,7 +142,7 @@ a:active {
 }
 
 .main > * {
-  border-top: 0.125rem solid aqua;
+  border-top: 0.125rem solid royalblue;
   padding: 0 1rem;
 }
 
@@ -171,15 +171,16 @@ a:active {
 
 .footer {
   margin-top: 3rem;
-  background-color: aqua;
+  background-color: royalblue;
   padding: 2rem;
 }
 
 .footer-text {
   text-align: center;
   margin: 0;
+  color: white;
 }
 
 .footer-link {
-  color: black;
+  color: navy;
 }
