--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ color: black;
   color: white;
 }
 
-@media screen and (min: width 992px) {
+@media screen and (min-width: 992px) {
   .hire-me {
     position: fixed;
   }
